argocd/manifests/cluster/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: couchbase
  labels:
    app: couchbase
